# learn_fastapi

./: .dockerignore  .gitignore  Dockerfile  docker-compose.yml  learn_fastapi.ipynb  myapi.py  pyproject.toml  readme.md  requirements.txt  requirements_test.txt
.github/workflows/: hello_world.yml  issue_comment.yml  test_myapi.yml
app/: dependencies.py  main.py
app/db/: fake_db.py
app/routers/: orders.py  users.py
app/schemas/: order.py  user.py
app/utils/: helpers.py
bitfumes/: main.py
bitfumes/blog/: database.py  main.py  models.py
learn/: 01_hello_world.py  02_path_params.py  03_query_params.py  04_request_body.py  05_pydantic_field.py  06_response_status.py  07_crud_all_in_one.py
tests/: test_app.py  test_myapi.py
